<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_profile"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img_android"
            app:shapeAppearanceOverlay="@style/circle" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical|start"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_fullname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/android_programming"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp">

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3d • Tashkent • "
                    android:textColor="#333333"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_baseline_public_24" />

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_baseline_more_horiz_24" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_st"
            android:layout_width="match_parent"
            android:layout_height="250dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingStart="16dp">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="36dp"
                    android:layout_height="wrap_content"
                    android:gravity="start">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/img_like" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="36dp"
                    android:layout_height="wrap_content"
                    android:gravity="end">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/ic_loved" />

                </LinearLayout>

            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="16dp"
                android:text="@string/_675"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/_154_"
            android:textSize="14sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.4dp"
        android:background="#cbcbcb" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_baseline_thumb_up_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/like"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_baseline_comment_bank_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comment"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_baseline_share_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:textColor="@color/black" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>